加入封装好的axios

--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <link rel="stylesheet" href="https://at.alicdn.com/t/font_626718_ivstomeu3di.css">
+
     <title>e_home</title>
   </head>
   <body>
@@ -11,7 +13,13 @@
     <!-- built files will be auto injected -->
   </body>
   <script>
-    var deviceWidth = document.documentElement.clientWidth;
-    document.documentElement.style.fontSize = deviceWidth/7.5 + "px";
+    function setRem() {
+      var deviceWidth = document.documentElement.clientWidth;
+      document.documentElement.style.fontSize = deviceWidth/7.5 + "px";
+    }
+    setRem();
+
+    window.onresize = setRem;
   </script>
+  <script type="text/javascript" src="//api.map.baidu.com/api?ak=T8aGZOH2GC1ypqIbi7ZZ35NeO0AR4tgl&type=lite&v=1.0"></script>
 </html>
