--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <link rel="stylesheet" href="https://at.alicdn.com/t/font_626718_ivstomeu3di.css">
-
+    <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=T8aGZOH2GC1ypqIbi7ZZ35NeO0AR4tgl"></script>
     <title>e_home</title>
   </head>
   <body>
@@ -21,5 +21,5 @@
 
     window.onresize = setRem;
   </script>
-  <script type="text/javascript" src="//api.map.baidu.com/api?ak=T8aGZOH2GC1ypqIbi7ZZ35NeO0AR4tgl&type=lite&v=1.0"></script>
+
 </html>
