--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <link rel="stylesheet" href="https://at.alicdn.com/t/font_626718_ivstomeu3di.css">
+    <link rel="stylesheet" href="https://at.alicdn.com/t/font_626718_fs9qaiwfr0j7zaor.css">
     <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=T8aGZOH2GC1ypqIbi7ZZ35NeO0AR4tgl"></script>
     <title>e_home</title>
   </head>
@@ -21,5 +21,5 @@
 
     window.onresize = setRem;
   </script>
-
+  <script src="/static/js/plupload-2.3.6/js/plupload.full.min.js"></script>
 </html>
